# Arc-Testnet

./: .env.example  .gitattributes  .gitignore  Cargo.toml  Makefile  README.md  build.rs  config.json  proxy.txt  run.sh
.github/workflows/: build.yml
docs/: ARCHITECTURE.md
src/: banner.rs  calldata.rs  config.rs  constants.rs  logger.rs  main.rs  proxy.rs  rpc.rs  wallet.rs
src/categories/: mod.rs
src/categories/arcfx/: calldata.rs  mod.rs
src/categories/axpha/: calldata.rs  mod.rs
src/categories/chainsgreets/: calldata.rs  mod.rs
src/categories/chainstreak/: calldata.rs  mod.rs
src/categories/curvedex/: calldata.rs  mod.rs
src/categories/flowonarc/: calldata.rs  mod.rs
src/categories/flowthree/: calldata.rs  mod.rs
src/categories/inuxarc/: mod.rs
src/categories/omnihub/: calldata.rs  mod.rs
src/categories/onchaingm/: calldata.rs  mod.rs
src/categories/onmifun/: calldata.rs  mod.rs
src/categories/painitiepay/: calldata.rs  mod.rs
src/categories/paymearc/: calldata.rs  mod.rs
src/categories/paytag/: calldata.rs  mod.rs
src/categories/prestodex/: calldata.rs  mod.rs
src/categories/super_bridge/: calldata.rs  mod.rs
src/categories/swaparc/: calldata.rs  mod.rs
src/categories/sweethaus/: calldata.rs  mod.rs
src/categories/watchoor/: calldata.rs  mod.rs
src/categories/yarcgmgn/: calldata.rs  mod.rs
src/categories/zkcodex/: calldata.rs  mod.rs
