[package]
name = "arc-bot"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "arc-bot"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ethers = { version = "2", features = ["rustls"] }
dotenvy = "0.15"
anyhow = "1"
hex = "0.4"
chrono = "0.4"
reqwest = { version = "0.11", features = ["socks", "rustls-tls", "json"], default-features = false }
figlet-rs = "0.1"
url = "2"
regex = "1"

[build-dependencies]
winres = "0.1"